--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.14.*"
 dependencies = [
+    "alembic>=1.13.0",
     "dotenv>=0.9.9",
-    "haystack-ai>=2.10.0",
     "loguru>=0.7.3",
-    "ollama-haystack>=2.3.0",
-    "openai>=1.63.0",
     "qdrant-client>=1.12.0",
     "sentence-transformers>=3.4.0",
     "sqlmodel>=0.0.22",
-    "tiktoken>=0.9.0",
 ]
 
 [project.optional-dependencies]
