--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,8 @@ markdown_extensions:
   - pymdownx.details
   - toc:
       permalink: true
+  - pymdownx.arithmatex:
+      generic: true
 
 nav:
   - Home: index.md
@@ -101,3 +103,8 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/Pitrified/shelf-mind
+  mathjax: true
+
+extra_javascript:
+  # - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
